# agent-rules-lint

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  ROADMAP.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: rule_request.yml
.github/workflows/: ci.yml  release.yml
agent_rules_lint/: __init__.py  cli.py  linter.py
tests/: test_cli.py  test_linter.py
