[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-rules-lint"
version = "0.1.1"
description = "Lint AI agent instruction files such as AGENTS.md, CLAUDE.md, Cursor rules, and Copilot instructions."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "Ukyo" }
]
keywords = ["ai-agents", "llm", "developer-tools", "lint", "claude-code", "cursor", "copilot"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Utilities"
]
dependencies = []

[project.scripts]
agent-rules-lint = "agent_rules_lint.cli:main"

[project.urls]
Homepage = "https://github.com/Uky0Yang/agent-rules-lint"
Repository = "https://github.com/Uky0Yang/agent-rules-lint"
Issues = "https://github.com/Uky0Yang/agent-rules-lint/issues"
Changelog = "https://github.com/Uky0Yang/agent-rules-lint/blob/main/CHANGELOG.md"
